replace GET /api/v1/organization/orders/{order_id}/invoices by GET /api/v1/organization/companies/{company_id}/invoices
